Add sdk and quickstart pages

--- a/src/pages/quickstarts.mdx
+++ b/src/pages/quickstarts.mdx
@@ -1,11 +1,34 @@
+import {Cards} from "@/components/Cards"
+
 # Quickstart Guides
 
 Our quickstart guides are designed to help you get started with Clerk and understand the core concepts.
 
-### [Quickstart Guide for Next.js Stable](/quickstarts/next/next)
-
-### [Quickstart Guide for Next.js App Router Beta](/quickstarts/next/next-beta)
-
-### [Quickstart Guide for React ](/quickstarts/react)
-
-### [Quickstart Guide for Expo ](/quickstarts/expo)
+<div className="container mx-auto my-4">
+  <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
+    <Cards
+      title="Next.js Stable"
+      description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your Next.js application."
+      link="/quickstarts/nextjs/stable"
+      cta="Get Started"
+    />
+    <Cards
+      title="Next.js App Router"
+      description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your Next.js using RSC."
+      link="/quickstarts/nextjs/app-router"
+      cta="Get Started"
+    />
+    <Cards
+      title="React"
+      description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your React application."
+      link="/quickstarts/react"
+      cta="Get Started"
+    />
+    <Cards
+      title="Expo"
+      description="Learn how to use Clerk to add secure authentication and user management to your Expo application using custom flows."
+      link="/quickstarts/expo"
+      cta="Get Started"
+    />
+  </div>
+</div>
