Adding quickstart to the index page

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -32,6 +32,12 @@ The Clerk beta docs are a work in progress, you may find some rough edges or mis
       link="/quickstarts/expo"
       cta="Get Started"
     />
+    <Cards
+      title="RedwoodJS"
+      description="Learn how to use Clerk to add secure authentication and user management to your RedwoodJS application"
+      link="/quickstarts/redwood"
+      cta="Get Started"
+    />
   </div>
 </div>
 
