--- a/src/pages/components/authentication/user-button.mdx
+++ b/src/pages/components/authentication/user-button.mdx
@@ -40,7 +40,7 @@ return (
         {/* Signed out users get sign in button */}
         <SignInButton />
       </SignedOut>
-    </header> 
+    </header>
 );
 }
 
@@ -124,6 +124,33 @@ function App() {
   );
 }
 
+```
+</Tab>
+<Tab>
+```tsx filename="router/index.tsx" copy
+import {
+  UserButton,
+} from "@clerk/remix";
+import { getAuth } from "@clerk/remix/ssr.server";
+import { LoaderFunction, redirect } from "@remix-run/node";
+
+export const loader: LoaderFunction = async (args) => {
+  const { userId } = await getAuth(args);
+  if(!userId){
+    return redirect("/sign-in");
+  }
+  return {};
+}
+
+export default function Index() {
+  return (
+    <div>
+        <h1>Index route</h1>
+        <p>You are signed in!</p>
+        <UserButton afterSignOutUrl="/"/>
+    </div>
+  );
+}
 ```
 </Tab>
 </Tabs>
