--- a/src/pages/components/authentication/user-profile.mdx
+++ b/src/pages/components/authentication/user-profile.mdx
@@ -41,6 +41,15 @@ const UserProfilePage = () => (
 export default UserProfilePage;
 ```
 </Tab>
+<Tab>
+```tsx filename="routes/user/$.tsx" copy
+import { UserProfile } from "@clerk/remix";
+
+export default function UserProfilePage() {
+  return <UserProfile path="/user" routing="path" />;
+}
+```
+</Tab>
 </Tabs>
 
 ## Props
