--- a/src/pages/components/organization-management/organization-profile.mdx
+++ b/src/pages/components/organization-management/organization-profile.mdx
@@ -36,6 +36,15 @@ export default function OrganizationProfilePage() {
 }
 ```
 </Tab>
+<Tab>
+```jsx copy filename="/pages/organization-profile/$.tsx"
+import { OrganizationProfile } from "@clerk/remix";
+
+export default function OrganizationProfilePage() {
+  return <OrganizationProfile />;
+}
+```
+</Tab>
 </Tabs>
 ## Props
 
