--- a/src/pages/components/organization-management/organization-switcher.mdx
+++ b/src/pages/components/organization-management/organization-switcher.mdx
@@ -44,6 +44,19 @@ export default function OrganizationSwitcherPage() {
 }
 ```
 </Tab>
+<Tab>
+```jsx copy filename="/pages/organization-switcher/$.tsx"
+import { OrganizationSwitcher } from "@clerk/remix";
+
+export default function OrganizationSwitcherPage() {
+  return (
+    <div>
+      <OrganizationSwitcher />
+    </div>
+  );
+}
+```
+</Tab>
 </Tabs>
 ## Props
 
