--- a/src/pages/components/organization-management/create-organization.mdx
+++ b/src/pages/components/organization-management/create-organization.mdx
@@ -36,6 +36,7 @@ export default function CreateOrganizationPage() {
 }
 ```
 </Tab>
+<Tab>
 ```jsx copy filename="/route/create-organization/$.tsx"
 import { CreateOrganization } from "@clerk/remix";
 
