--- a/src/pages/components/user-management/clerk-loaded.mdx
+++ b/src/pages/components/user-management/clerk-loaded.mdx
@@ -82,4 +82,22 @@ function Page() {
 export default App;
 ```
 </Tab>
+<Tab>
+```tsx filename="routes/index.tsx" copy
+import {
+  ClerkLoaded
+} from "@clerk/remix";
+
+export default function Index() {
+  return (
+    <div>
+      <ClerkLoaded>
+        <div>Clerk is loaded</div>
+        <p>window.Clerk.version</p>
+      </ClerkLoaded>
+    </div>
+  );
+}
+```
+</Tab>
 </Tabs>
