--- a/src/pages/components/user-management/clerk-loading.mdx
+++ b/src/pages/components/user-management/clerk-loading.mdx
@@ -57,4 +57,21 @@ export default App;
 ```
 
 </Tab>
+<Tab>
+```tsx filename="routes/index.tsx" copy
+import {
+  ClerkLoading
+} from "@clerk/remix";
+
+export default function Index() {
+  return (
+    <div>
+      <ClerkLoading>
+        <div>Clerk is loading</div>
+      </ClerkLoading>
+    </div>
+  );
+}
+```
+</Tab>
 </Tabs>
