--- a/src/pages/components/user-management/redirect-to-signup.mdx
+++ b/src/pages/components/user-management/redirect-to-signup.mdx
@@ -35,11 +35,11 @@ export default MyApp;
 </Tab>
 <Tab>
 ```tsx copy filename="pages/privatepage.tsx"
-import { 
+import {
   ClerkProvider,
   SignedIn,
   SignedOut,
-  RedirectToSignUp 
+  RedirectToSignUp
 } from "@clerk/clerk-react";
 
 function PrivatePage() {
@@ -48,6 +48,31 @@ function PrivatePage() {
       <SignedIn>
         Content that is displayed to signed in
         users.
+      </SignedIn>
+      <SignedOut>
+        <RedirectToSignUp />
+      </SignedOut>
+    </div>
+  );
+}
+```
+</Tab>
+<Tab>
+```tsx filename="routes/index.tsx" copy
+import {
+  SignedIn,
+  SignedOut,
+  RedirectToSignUp,
+  UserButton,
+} from "@clerk/remix";
+
+export default function Index() {
+  return (
+    <div>
+      <SignedIn>
+        <h1>Index route</h1>
+        <p>You are signed in!</p>
+        <UserButton />
       </SignedIn>
       <SignedOut>
         <RedirectToSignUp />
