--- a/src/pages/components/user-management/redirect-to-userprofile.mdx
+++ b/src/pages/components/user-management/redirect-to-userprofile.mdx
@@ -38,11 +38,11 @@ export default MyApp;
 </Tab>
 <Tab>
 ```tsx copy filename="pages/privatepage.tsx"
-import { 
+import {
   ClerkProvider,
   SignedIn,
   SignedOut,
-  RedirectToUserProfile 
+  RedirectToUserProfile
 } from "@clerk/clerk-react";
 
 function PrivatePage() {
@@ -53,6 +53,28 @@ function PrivatePage() {
       </SignedIn>
       <SignedOut>
         Please Sign In
+      </SignedOut>
+    </div>
+  );
+}
+```
+</Tab>
+<Tab>
+```tsx filename="routes/index.tsx" copy
+import {
+  SignedIn,
+  SignedOut,
+  RedirectToUserProfile
+} from "@clerk/remix";
+
+export default function Index() {
+  return (
+    <div>
+      <SignedIn>
+        <RedirectToUserProfile/>
+      </SignedIn>
+      <SignedOut>
+        <p>Please sign in </p>
       </SignedOut>
     </div>
   );
