--- a/src/pages/components/user-management/signed-in.mdx
+++ b/src/pages/components/user-management/signed-in.mdx
@@ -4,7 +4,7 @@ import { Tab, Tabs } from "nextra-theme-docs";
 # `<SignedIn>`
 
 ## Overview
-The `<SignedIn/>` component offers authentication checks as a cross-cutting concern. Any children components wrapped by a `<SignedIn/>` component will be rendered only if there's a User with an active Session signed in your application. 
+The `<SignedIn/>` component offers authentication checks as a cross-cutting concern. Any children components wrapped by a `<SignedIn/>` component will be rendered only if there's a User with an active Session signed in your application.
 
 ## Usage
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
@@ -46,12 +46,32 @@ function Page() {
         </div>
         <SignedIn>
           <div>
-            This content is visible only to 
+            This content is visible only to
             signed in users.
           </div>
         </SignedIn>
       </section>
     </ClerkProvider>
+  );
+}
+```
+</Tab>
+<Tab>
+```tsx filename="routes/index.tsx" copy
+import {
+  SignedIn,
+  UserButton,
+} from "@clerk/remix";
+
+export default function Index() {
+  return (
+    <div>
+      <SignedIn>
+        <h1>Index route</h1>
+        <p>You are signed in!</p>
+        <UserButton />
+      </SignedIn>
+    </div>
   );
 }
 ```
@@ -64,9 +84,9 @@ Below is an example of how to use `<SignedIn/>` with React Router. The `<SignedI
 
 ```jsx copy filename="app.tsx"
 import { Routes, Route } from 'react-router-dom';
-import { 
+import {
   ClerkProvider,
-  SignedIn, 
+  SignedIn,
 } from "@clerk/clerk-react";
 
 function App() {
