--- a/src/pages/components/user-management/signed-out.mdx
+++ b/src/pages/components/user-management/signed-out.mdx
@@ -59,10 +59,10 @@ Below is an example of how to use `<SignedOut/>` with React Router. The `<Signed
 
 ```jsx copy filename="app.tsx"
 import { Routes, Route } from 'react-router-dom';
-import { 
+import {
   ClerkProvider,
-  SignedOut, 
-  RedirectToSignIn 
+  SignedOut,
+  RedirectToSignIn
 } from "@clerk/clerk-react";
 
 function App() {
@@ -83,6 +83,30 @@ function App() {
         />
       </Routes>
       </ClerkProvider>
+  );
+}
+```
+</Tab>
+<Tab>
+```tsx filename="routes/index.tsx" copy
+import {
+  SignedIn,
+  SignedOut,
+  UserButton,
+} from "@clerk/remix";
+
+export default function Index() {
+  return (
+    <div>
+      <SignedIn>
+        <h1>Index route</h1>
+        <p>You are signed in!</p>
+        <UserButton />
+      </SignedIn>
+      <SignedOut>
+      <p> You are signed out </p>
+      </SignedOut>
+    </div>
   );
 }
 ```
