--- a/src/pages/components/user-management/redirect-to-signin.mdx
+++ b/src/pages/components/user-management/redirect-to-signin.mdx
@@ -35,11 +35,11 @@ export default MyApp;
 </Tab>
 <Tab>
 ```tsx copy filename="pages/privatepage.tsx"
-import { 
+import {
   ClerkProvider,
   SignedIn,
   SignedOut,
-  RedirectToSignIn 
+  RedirectToSignIn
 } from "@clerk/clerk-react";
 
 function PrivatePage() {
@@ -58,5 +58,29 @@ function PrivatePage() {
 
 ```
 </Tab>
-</Tabs>
+<Tab>
+```tsx filename="routes/index.tsx" copy
+import {
+  SignedIn,
+  SignedOut,
+  RedirectToSignIn,
+  UserButton,
+} from "@clerk/remix";
+
+export default function Index() {
+  return (
+    <div>
+      <SignedIn>
+        <h1>Index route</h1>
+        <p>You are signed in!</p>
+        <UserButton />
+      </SignedIn>
+      <SignedOut>
+        <RedirectToSignIn />
+      </SignedOut>
+    </div>
+  );
+}
 ```
+</Tab>
+</Tabs>
