fix: file name typo

--- a/src/pages/quickstarts/nextjs/app-router.mdx
+++ b/src/pages/quickstarts/nextjs/app-router.mdx
@@ -100,7 +100,7 @@ export default function Page() {
 
 To use server side functionality, you need to add the Clerk middleware to your Next.js application. This allows you to access the session in your Next.js API routes and server-side rendered pages. Middleware should be placed at the root of your project.
 
-```tsx copy filename="middeware.ts"
+```tsx copy filename="middleware.ts"
 import { withClerkMiddleware } from "@clerk/nextjs/server";
 import { NextResponse } from "next/server";
 import type { NextRequest } from "next/server";
@@ -124,7 +124,7 @@ Clerk offers two ways to protect your Next.js application, you can use Next.js M
 
 Using Middleware is the most comprehensive way to implement page protection in your app. Below is an example of page protection using Middleware.
 
-```ts copy filename="middeware.ts"
+```ts copy filename="middleware.ts"
 import { withClerkMiddleware, getAuth } from "@clerk/nextjs/server";
 import { NextResponse } from "next/server";
 import type { NextRequest } from "next/server";
