--- a/src/pages/sdk/next/with-clerk-middleware.mdx
+++ b/src/pages/sdk/next/with-clerk-middleware.mdx
@@ -12,7 +12,7 @@ The `withClerkMiddleware` wrapper allows Clerk to access session data on the ser
 
 This is the minimal amount of code needed to use Clerk Server Side helpers.
 
-```tsx filename="middeware.ts" copy
+```tsx filename="middleware.ts" copy
 import { withClerkMiddleware } from "@clerk/nextjs/server";
 import { NextResponse } from "next/server";
 import type { NextRequest } from "next/server";
@@ -29,7 +29,7 @@ export const config = {
 
 #### Usage with page protection
 
-```tsx filename="middeware.ts" copy
+```tsx filename="middleware.ts" copy
 import { withClerkMiddleware, getAuth } from "@clerk/nextjs/server";
 import { NextResponse } from "next/server";
 import type { NextRequest } from "next/server";
