--- a/src/pages/sdk/next/get-auth.mdx
+++ b/src/pages/sdk/next/get-auth.mdx
@@ -60,7 +60,7 @@ export default async function handler(
   const { getToken } = getAuth(req);
   const token = await getToken({ template: "supabase" });
   // Retrieve the data from your database
-  return res.status(200).json({ data });
+  return res.status(200).json({});
 }
 ```
 
@@ -78,7 +78,7 @@ export default async function handler(
 ) {
   const { userId } = getAuth(req);
   const user = userId ? await clerkClient.users.getUser(userId) : null;
-  return res.status(200).json({ data });
+  return res.status(200).json({});
 }
 ```
 
