--- a/src/pages/quickstarts/nextjs/stable.mdx
+++ b/src/pages/quickstarts/nextjs/stable.mdx
@@ -172,7 +172,7 @@ export const config = {
 <Tab>
 If you prefer to use Clerk's Control Components for page protection, the following example shows you how to compose control components.
 
-```tsx
+```tsx copy filename="/pages/_app.tsx"
 import {
   ClerkProvider,
   SignedIn,
