fix: solve typo on SignUp component
Instead of SigIn prefix SignUp could be better

--- a/src/pages/components/authentication/sign-up.mdx
+++ b/src/pages/components/authentication/sign-up.mdx
@@ -26,11 +26,11 @@ Below is basic implementation of the `<SignUp/>` component. You can use this as 
 ```jsx copy filename="/pages/sign-up/[[...index]].[jsx/tsx]"
 import { SignUp } from "@clerk/nextjs";
 
-const SignInPage = () => (
+const SignUpPage = () => (
 
 <SignUp path="/sign-up" routing="path" signInUrl="/sign-in" />
 ); 
-export default SignInPage; 
+export default SignUnPage; 
 ```
 
 </Tab>
@@ -39,7 +39,7 @@ export default SignInPage;
 ```jsx copy filename="sign-up.jsx"
 import { SignUp } from "@clerk/clerk-react";
 
-function SignInPage() {
+function SignUnPage() {
   return <SignUp />;
 }
 ```
