--- a/src/pages/quickstarts/nextjs/app-router.mdx
+++ b/src/pages/quickstarts/nextjs/app-router.mdx
@@ -109,9 +109,9 @@ export default withClerkMiddleware((req: NextRequest) => {
   return NextResponse.next();
 });
 
-// Stop Middleware running on static files
+// Stop Middleware running on static files and public folder
 export const config = {
-  matcher: ["/((?!_next/image|_next/static|favicon.ico).*)", "/"],
+  matcher: ["/((?!_next/image|_next/static|favicon.ico|.).*)", "/"],
 };
 ```
 
@@ -155,8 +155,9 @@ export default withClerkMiddleware((request: NextRequest) => {
   return NextResponse.next();
 });
 
+// Stop Middleware running on static files and public folder
 export const config = {
-  matcher: ["/((?!_next/image|_next/static|favicon.ico).*)", "/"],
+  matcher: ["/((?!_next/image|_next/static|favicon.ico|.).*)", "/"],
 };
 ```
 
