--- a/src/pages/quickstarts/nextjs/stable.mdx
+++ b/src/pages/quickstarts/nextjs/stable.mdx
@@ -117,9 +117,9 @@ export default withClerkMiddleware((req: NextRequest) => {
   return NextResponse.next();
 });
 
-// Stop Middleware running on static files
+// Stop Middleware running on static files and public folder
 export const config = {
-  matcher: "/((?!_next/image|_next/static|favicon.ico).*)",
+  matcher: ["/((?!_next/image|_next/static|favicon.ico|.).*)", "/"],
 };
 ```
 
@@ -164,7 +164,7 @@ export default withClerkMiddleware((request: NextRequest) => {
 });
 
 export const config = {
-  matcher: "/((?!_next/image|_next/static|favicon.ico).*)",
+  matcher: ["/((?!_next/image|_next/static|favicon.ico|.).*)", "/"],
 };
 ```
 
