--- a/src/pages/quickstarts/nextjs/stable.mdx
+++ b/src/pages/quickstarts/nextjs/stable.mdx
@@ -119,8 +119,19 @@ export default withClerkMiddleware((req: NextRequest) => {
 
 // Stop Middleware running on static files and public folder
 export const config = {
-  matcher: ["/((?!_next/image|_next/static|favicon.ico|.).*)", "/"],
-};
+  matcher: [
+    /*
+     * Match all request paths except for the ones starting with:
+     * - _next/image (image optimization files)
+     * - _next/static (static files)
+     * - favicon.ico (favicon file)
+     * - public /images folder
+     * - public /assets folder
+     */
+    "/((?!_next/image|_next/static|favicon.ico|images|assets).*)",
+    "/",
+  ],
+}
 ```
 
 ## Protecting Your Pages
@@ -163,9 +174,21 @@ export default withClerkMiddleware((request: NextRequest) => {
   return NextResponse.next();
 });
 
+// Stop Middleware running on static files and public folder
 export const config = {
-  matcher: ["/((?!_next/image|_next/static|favicon.ico|.).*)", "/"],
-};
+  matcher: [
+    /*
+     * Match all request paths except for the ones starting with:
+     * - _next/image (image optimization files)
+     * - _next/static (static files)
+     * - favicon.ico (favicon file)
+     * - public /images folder
+     * - public /assets folder
+     */
+    "/((?!_next/image|_next/static|favicon.ico|images|assets).*)",
+    "/",
+  ],
+}
 ```
 
 </Tab>
