--- a/src/pages/quickstarts/nextjs/app-router.mdx
+++ b/src/pages/quickstarts/nextjs/app-router.mdx
@@ -111,8 +111,19 @@ export default withClerkMiddleware((req: NextRequest) => {
 
 // Stop Middleware running on static files and public folder
 export const config = {
-  matcher: ["/((?!_next/image|_next/static|favicon.ico|.).*)", "/"],
-};
+  matcher: [
+    /*
+     * Match all request paths except for the ones starting with:
+     * - _next/image (image optimization files)
+     * - _next/static (static files)
+     * - favicon.ico (favicon file)
+     * - public /images folder
+     * - public /assets folder
+     */
+    "/((?!_next/image|_next/static|favicon.ico|images|assets).*)",
+    "/",
+  ],
+}
 ```
 
 ## Protecting Your Pages
@@ -157,8 +168,19 @@ export default withClerkMiddleware((request: NextRequest) => {
 
 // Stop Middleware running on static files and public folder
 export const config = {
-  matcher: ["/((?!_next/image|_next/static|favicon.ico|.).*)", "/"],
-};
+  matcher: [
+    /*
+     * Match all request paths except for the ones starting with:
+     * - _next/image (image optimization files)
+     * - _next/static (static files)
+     * - favicon.ico (favicon file)
+     * - public /images folder
+     * - public /assets folder
+     */
+    "/((?!_next/image|_next/static|favicon.ico|images|assets).*)",
+    "/",
+  ],
+}
 ```
 
 </Tab>
