--- a/src/pages/quickstarts/nextjs/stable.mdx
+++ b/src/pages/quickstarts/nextjs/stable.mdx
@@ -128,7 +128,7 @@ export const config = {
      * - public /images folder
      * - public /assets folder
      */
-    "/((?!_next/image|_next/static|favicon.ico|images|assets).*)",
+    "/((?!static|.*\\..*|_next|favicon.ico).*)",
     "/",
   ],
 }
@@ -185,7 +185,7 @@ export const config = {
      * - public /images folder
      * - public /assets folder
      */
-    "/((?!_next/image|_next/static|favicon.ico|images|assets).*)",
+    "/((?!static|.*\\..*|_next|favicon.ico).*)",
     "/",
   ],
 }
