--- a/src/pages/quickstarts/nextjs/app-router.mdx
+++ b/src/pages/quickstarts/nextjs/app-router.mdx
@@ -120,7 +120,7 @@ export const config = {
      * - public /images folder
      * - public /assets folder
      */
-    "/((?!_next/image|_next/static|favicon.ico|images|assets).*)",
+    "/((?!static|.*\\..*|_next|favicon.ico).*)",
     "/",
   ],
 }
@@ -177,7 +177,7 @@ export const config = {
      * - public /images folder
      * - public /assets folder
      */
-    "/((?!_next/image|_next/static|favicon.ico|images|assets).*)",
+    "/((?!static|.*\\..*|_next|favicon.ico).*)",
     "/",
   ],
 }
