--- a/src/pages/sdk/next/with-clerk-middleware.mdx
+++ b/src/pages/sdk/next/with-clerk-middleware.mdx
@@ -23,8 +23,19 @@ export default withClerkMiddleware((req: NextRequest) => {
 
 // Stop Middleware running on static files
 export const config = {
-  matcher: "/((?!_next/image|_next/static|favicon.ico).*)",
-};
+  matcher: [
+    /*
+     * Match all request paths except for the ones starting with:
+     * - _next
+     * - static (static files)
+     * - favicon.ico (favicon file)
+     * - public folder
+     * - public folder
+     */
+    "/((?!static|.*\\..*|_next|favicon.ico).*)",
+    "/",
+  ],
+}
 ```
 
 #### Usage with page protection
@@ -61,6 +72,17 @@ export default withClerkMiddleware((request: NextRequest) => {
 });
 
 export const config = {
-  matcher: "/((?!_next/image|_next/static|favicon.ico).*)",
-};
+  matcher: [
+    /*
+     * Match all request paths except for the ones starting with:
+     * - _next
+     * - static (static files)
+     * - favicon.ico (favicon file)
+     * - public folder
+     * - public folder
+     */
+    "/((?!static|.*\\..*|_next|favicon.ico).*)",
+    "/",
+  ],
+}
 ```
