--- a/src/pages/quickstarts/nextjs/stable.mdx
+++ b/src/pages/quickstarts/nextjs/stable.mdx
@@ -117,16 +117,15 @@ export default withClerkMiddleware((req: NextRequest) => {
   return NextResponse.next();
 });
 
-// Stop Middleware running on static files and public folder
 export const config = {
   matcher: [
     /*
      * Match all request paths except for the ones starting with:
-     * - _next/image (image optimization files)
-     * - _next/static (static files)
+     * - _next
+     * - static (static files)
      * - favicon.ico (favicon file)
-     * - public /images folder
-     * - public /assets folder
+     * - public folder
+     * - public folder
      */
     "/((?!static|.*\\..*|_next|favicon.ico).*)",
     "/",
@@ -179,11 +178,11 @@ export const config = {
   matcher: [
     /*
      * Match all request paths except for the ones starting with:
-     * - _next/image (image optimization files)
-     * - _next/static (static files)
+     * - _next
+     * - static (static files)
      * - favicon.ico (favicon file)
-     * - public /images folder
-     * - public /assets folder
+     * - public folder
+     * - public folder
      */
     "/((?!static|.*\\..*|_next|favicon.ico).*)",
     "/",
