--- a/src/pages/quickstarts/nextjs/app-router.mdx
+++ b/src/pages/quickstarts/nextjs/app-router.mdx
@@ -114,11 +114,11 @@ export const config = {
   matcher: [
     /*
      * Match all request paths except for the ones starting with:
-     * - _next/image (image optimization files)
-     * - _next/static (static files)
+     * - _next
+     * - static (static files)
      * - favicon.ico (favicon file)
-     * - public /images folder
-     * - public /assets folder
+     * - public folder
+     * - public folder
      */
     "/((?!static|.*\\..*|_next|favicon.ico).*)",
     "/",
@@ -171,11 +171,11 @@ export const config = {
   matcher: [
     /*
      * Match all request paths except for the ones starting with:
-     * - _next/image (image optimization files)
-     * - _next/static (static files)
+     * - _next
+     * - static (static files)
      * - favicon.ico (favicon file)
-     * - public /images folder
-     * - public /assets folder
+     * - public folder
+     * - public folder
      */
     "/((?!static|.*\\..*|_next|favicon.ico).*)",
     "/",
