--- a/src/pages/quickstarts/react.mdx
+++ b/src/pages/quickstarts/react.mdx
@@ -47,6 +47,9 @@ import React from "react";
 import "./App.css";
 import { ClerkProvider } from "@clerk/clerk-react";
 
+if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
+  throw "Missing Publishable Key"
+}
 const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
 
 function App() {
@@ -76,11 +79,15 @@ import {
   RedirectToSignIn,
 } from "@clerk/clerk-react";
 
-const clerk_pub_key = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
+if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
+  throw "Missing Publishable Key"
+}
+
+const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
 
 function App() {
   return (
-    <ClerkProvider publishableKey={clerk_pub_key}>
+    <ClerkProvider publishableKey={clerkPubKey}>
       <SignedIn>
         <Welcome />
       </SignedIn>
@@ -112,7 +119,11 @@ import {
 } from "@clerk/clerk-react";
 import { BrowserRouter, Route, Routes, useNavigate } from "react-router-dom";
 
-const clerk_pub_key = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
+if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
+  throw "Missing Publishable Key"
+}
+
+const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
 
 function PublicPage() {
   return (
@@ -137,7 +148,7 @@ function ClerkProviderWithRoutes() {
 
   return (
     <ClerkProvider
-      publishableKey={clerk_pub_key}
+      publishableKey={clerkPubKey}
       navigate={(to) => navigate(to)}
     >
       <Routes>
