--- a/src/pages/quickstarts/react.mdx
+++ b/src/pages/quickstarts/react.mdx
@@ -113,6 +113,8 @@ Clerk can work with any routing library, below is an example of how to use Clerk
 import {
   ClerkProvider,
   SignedIn,
+  SignedOut,
+  RedirectToSignIn,
   SignIn,
   SignUp,
   UserButton,
@@ -167,6 +169,9 @@ function ClerkProviderWithRoutes() {
             <SignedIn>
               <ProtectedPage />
             </SignedIn>
+             <SignedOut>
+              <RedirectToSignIn />
+           </SignedOut>
           }
         />
       </Routes>
