--- a/src/pages/quickstarts/nextjs/app-router.mdx
+++ b/src/pages/quickstarts/nextjs/app-router.mdx
@@ -99,6 +99,10 @@ export default function Page() {
 ## Add Middleware
 
 To use server side functionality, you need to add the Clerk middleware to your Next.js application. This allows you to access the session in your Next.js API routes and server-side rendered pages. Middleware should be placed at the root of your project.
+  
+<Callout type="info" emoji="ℹ️">
+If you select `src/` as part of the create-next-app CLI you will need to place the middleware file inside of that directory.
+</Callout>
 
 ```tsx copy filename="middleware.ts"
 import { withClerkMiddleware } from "@clerk/nextjs/server";
