--- a/src/pages/quickstarts/react.mdx
+++ b/src/pages/quickstarts/react.mdx
@@ -122,7 +122,7 @@ import {
 import { BrowserRouter, Route, Routes, useNavigate } from "react-router-dom";
 
 if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
-  throw "Missing Publishable Key"
+  throw new Error("Missing Publishable Key")
 }
 
 const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
