Fix @clerk/nextjs private subpath import

--- a/src/pages/quickstarts/nextjs/app-router.mdx
+++ b/src/pages/quickstarts/nextjs/app-router.mdx
@@ -318,7 +318,7 @@ Under the hood, this calls `fetch()` so it is automatically deduped per request.
 
 ```tsx copy filename="page.tsx"
 import { currentUser } from "@clerk/nextjs/app-beta";
-import type { User } from "@clerk/nextjs/dist/api";
+import type { User } from "@clerk/nextjs/api";
 
 export default async function Page() {
   const user: User | null = await currentUser();
