Adding new code blocks

--- a/src/pages/components/authentication/sign-in-button.mdx
+++ b/src/pages/components/authentication/sign-in-button.mdx
@@ -1,6 +1,7 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
 import { Tables } from "@/components/Table";
+import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # `<SignInButton />`
 
@@ -8,8 +9,9 @@ import { Tables } from "@/components/Table";
 
 ## Usage
 
-<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
-<Tab>
+#### Basic Usage
+
+<CodeBlockTabs options={['Next.js', 'React', 'Remix', 'Gatsby']}>
 ```jsx copy filename="pages/index.js"
 import { SignInButton } from "@clerk/nextjs";
 
@@ -22,25 +24,63 @@ export default function Home() {
   );
 }
 ```
-You can also overide the default button with your own button and text.
+```jsx copy filename="example.js"
+import { SignInButton } from "@clerk/clerk-react";
 
+export default function Example() {
+  return (
+    <div>
+    <h1> Sign in </h1>
+      <SignInButton />
+    </div>
+  );
+}
+```
+```jsx copy filename="pages/index.js"
+import { SignInButton } from "@clerk/remix";
+
+export default function Home() {
+  return (
+    <div>
+    <h1> Sign in </h1>
+      <SignInButton />
+    </div>
+  );
+}
+```
+```jsx copy filename="pages/index.js"
+import { SignInButton } from "gatsby-plugin-clerk";
+
+export default function Home() {
+  return (
+    <div>
+    <h1> Sign in </h1>
+      <SignInButton />
+    </div>
+  );
+}
+```
+</CodeBlockTabs>
+
+#### Custom Usage
+
+In some cases you will want to use your own button, or button text. You can do that by wrapping your button up.
+
+<CodeBlockTabs options={['Next.js', 'React', 'Remix', 'Gatsby']}>
 ```jsx copy filename="pages/index.js"
 import { SignInButton } from "@clerk/nextjs";
 
 export default function Home() {
   return (
     <div>
-      <h1> Sign in </h1>
-      <SignInButton mode="modal">
-        <button className="btn">Sign in</button>
+    <h1> Sign in </h1>
+      <SignInButton>
+      <button>Sign in with Clerk</button>
       </SignInButton>
     </div>
   );
 }
 ```
-
-</Tab>
-<Tab>
 ```jsx copy filename="example.js"
 import { SignInButton } from "@clerk/clerk-react";
 
@@ -48,30 +88,13 @@ export default function Example() {
   return (
     <div>
     <h1> Sign in </h1>
-      <SignInButton />
-    </div>
-  );
-}
-```
-You can also overide the default button with your own button and text.
-```jsx copy filename="example.js"
-import { SignInButton } from "@clerk/clerk-react";
-
-export default function Example() {
-  return (
-    <div>
-    <h1> Sign in </h1>
-      <SignInButton mode="modal">
-        <button className="btn">
-          Sign in
-        </button>
+      <SignInButton>
+      <button>Sign in with Clerk</button>
       </SignInButton>
     </div>
   );
 }
 ```
-</Tab>
-<Tab>
 ```jsx copy filename="pages/index.js"
 import { SignInButton } from "@clerk/remix";
 
@@ -79,30 +102,13 @@ export default function Home() {
   return (
     <div>
     <h1> Sign in </h1>
-      <SignInButton />
-    </div>
-  );
-}
-```
-You can also overide the default button with your own button and text.
-```jsx copy filename="pages/index.js"
-import { SignInButton } from "@clerk/remix";
-
-export default function Home() {
-  return (
-    <div>
-    <h1> Sign in </h1>
-      <SignInButton mode="modal">
-        <button className="btn">
-          Sign in
-        </button>
+      <SignInButton>
+      <button>Sign in with Clerk</button>
       </SignInButton>
     </div>
   );
 }
 ```
-</Tab>
-<Tab>
 ```jsx copy filename="pages/index.js"
 import { SignInButton } from "gatsby-plugin-clerk";
 
@@ -110,29 +116,11 @@ export default function Home() {
   return (
     <div>
     <h1> Sign in </h1>
-      <SignInButton />
-    </div>
-  );
-}
-```
-You can also overide the default button with your own button and text.
-```jsx copy filename="pages/index.js"
-import { SignInButton } from "gatsby-plugin-clerk";
-
-export default function Home() {
-  return (
-    <div>
-    <h1> Sign in </h1>
-      <SignInButton mode="modal">
-        <button className="btn">
-          Sign in
-        </button>
+      <SignInButton>
+      <button>Sign in with Clerk</button>
       </SignInButton>
     </div>
   );
 }
 ```
-</Tab>
-</Tabs
-
->
+</CodeBlockTabs>
