--- a/src/pages/components/authentication/sign-in-with-meta.mdx
+++ b/src/pages/components/authentication/sign-in-with-meta.mdx
@@ -1,6 +1,7 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
 import { Tables } from "@/components/Table";
+import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # `<SignInWithMetamaskButton />`
 
@@ -8,8 +9,8 @@ import { Tables } from "@/components/Table";
 
 ## Usage
 
-<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
-<Tab>
+#### Basic Usage
+<CodeBlockTabs options={['Next.js', 'React', 'Remix', 'Gatsby']}>
 ```jsx copy filename="pages/index.js"
 import { SignInWithMetamaskButton } from "@clerk/nextjs";
 
@@ -22,38 +23,64 @@ export default function Home() {
   );
 }
 ```
-You can also overide the default button with your own button and text.
+```jsx copy filename="example.js"
+import { SignInWithMetamaskButton } from "@clerk/clerk-react";
 
+export default function Example() {
+  return (
+    <div>
+    <h1> Sign in </h1>
+      <SignInWithMetamaskButton />
+    </div>
+  );
+}
+```
+```jsx copy filename="pages/index.js"
+import { SignInWithMetamaskButton } from "@clerk/remix";
+
+export default function Home() {
+  return (
+    <div>
+    <h1> Sign in </h1>
+      <SignInWithMetamaskButton />
+    </div>
+  );
+}
+```
+```jsx copy filename="pages/index.js"
+import { SignInWithMetamaskButton } from "gatsby-plugin-clerk";
+
+export default function Home() {
+  return (
+    <div>
+    <h1> Sign in </h1>
+      <SignInWithMetamaskButton />
+    </div>
+  );
+}
+```
+</CodeBlockTabs>
+
+#### Custom Usage
+In some cases you will want to use your own button, or button text. You can do that by wrapping your button up.
+
+<CodeBlockTabs options={['Next.js', 'React', 'Remix', 'Gatsby']}>
 ```jsx copy filename="pages/index.js"
 import { SignInWithMetamaskButton } from "@clerk/nextjs";
 
 export default function Home() {
   return (
     <div>
-      <h1> Sign in </h1>
+    <h1> Sign in </h1>
       <SignInWithMetamaskButton mode="modal">
-        <button className="btn">Sign in</button>
+        <button>
+          Sign in
+        </button>
       </SignInWithMetamaskButton>
     </div>
   );
 }
 ```
-
-</Tab>
-<Tab>
-```jsx copy filename="example.js"
-import { SignInWithMetamaskButton } from "@clerk/clerk-react";
-
-export default function Example() {
-  return (
-    <div>
-    <h1> Sign in </h1>
-      <SignInWithMetamaskButton />
-    </div>
-  );
-}
-```
-You can also overide the default button with your own button and text.
 ```jsx copy filename="example.js"
 import { SignInWithMetamaskButton } from "@clerk/clerk-react";
 
@@ -62,7 +89,7 @@ export default function Example() {
     <div>
     <h1> Sign in </h1>
       <SignInWithMetamaskButton mode="modal">
-        <button className="btn">
+        <button>
           Sign in
         </button>
       </SignInWithMetamaskButton>
@@ -70,21 +97,6 @@ export default function Example() {
   );
 }
 ```
-</Tab>
-<Tab>
-```jsx copy filename="pages/index.js"
-import { SignInWithMetamaskButton } from "@clerk/remix";
-
-export default function Home() {
-  return (
-    <div>
-    <h1> Sign in </h1>
-      <SignInWithMetamaskButton />
-    </div>
-  );
-}
-```
-You can also overide the default button with your own button and text.
 ```jsx copy filename="pages/index.js"
 import { SignInWithMetamaskButton } from "@clerk/remix";
 
@@ -93,7 +105,7 @@ export default function Home() {
     <div>
     <h1> Sign in </h1>
       <SignInWithMetamaskButton mode="modal">
-        <button className="btn">
+        <button>
           Sign in
         </button>
       </SignInWithMetamaskButton>
@@ -101,21 +113,6 @@ export default function Home() {
   );
 }
 ```
-</Tab>
-<Tab>
-```jsx copy filename="pages/index.js"
-import { SignInWithMetamaskButton } from "gatsby-plugin-clerk";
-
-export default function Home() {
-  return (
-    <div>
-    <h1> Sign in </h1>
-      <SignInWithMetamaskButton />
-    </div>
-  );
-}
-```
-You can also overide the default button with your own button and text.
 ```jsx copy filename="pages/index.js"
 import { SignInWithMetamaskButton } from "gatsby-plugin-clerk";
 
@@ -124,7 +121,7 @@ export default function Home() {
     <div>
     <h1> Sign in </h1>
       <SignInWithMetamaskButton mode="modal">
-        <button className="btn">
+        <button>
           Sign in
         </button>
       </SignInWithMetamaskButton>
@@ -132,7 +129,4 @@ export default function Home() {
   );
 }
 ```
-</Tab>
-</Tabs
-
->
+</CodeBlockTabs>
