--- a/src/pages/components/authentication/sign-up.mdx
+++ b/src/pages/components/authentication/sign-up.mdx
@@ -2,6 +2,8 @@ import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
 import { Tables } from "@/components/Table";
 import { Images } from "@/components/Images";
+import { CodeBlockTabs } from "@/components/CodeBlockTabs";
+
 
 # `<SignUp />`
 
@@ -20,21 +22,17 @@ The `<SignUp/>` component renders a UI for signing up users. The functionality o
 
 Below is basic implementation of the `<SignUp/>` component. You can use this as a starting point for your own implementation
 
-<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby', 'javascript']}>
+<CodeBlockTabs options={['Next.js', 'React', 'Remix', 'Gatsby', 'JavaScript']}>
 
-<Tab>
 ```jsx copy filename="/pages/sign-up/[[...index]].[jsx/tsx]"
 import { SignUp } from "@clerk/nextjs";
 
 const SignUpPage = () => (
 
 <SignUp path="/sign-up" routing="path" signInUrl="/sign-in" />
-); 
-export default SignUnPage; 
+);
+export default SignUnPage;
 ```
-
-</Tab>
-<Tab>
 
 ```jsx copy filename="sign-up.jsx"
 import { SignUp } from "@clerk/clerk-react";
@@ -44,8 +42,6 @@ function SignUnPage() {
 }
 ```
 
-</Tab>
-<Tab>
 ```jsx copy filename="app/routes/sign-up/$.tsx"
 import { SignUp } from "@clerk/remix";
 
@@ -58,8 +54,7 @@ export default function SignUpPage() {
   );
 }
 ```
-</Tab>
-<Tab>
+
 ```jsx copy filename="/pages/sign-up.js"
 import { SignUp } from "gatsby-plugin-clerk";
 
@@ -72,16 +67,14 @@ export default function SignUpPage() {
   );
 }
 ```
-</Tab>
-<Tab>
+
 ```js copy filename="sign-up.js"
 window.Clerk.mountSignUp(
   document.getElementById("sign-up")
 );
 window.Clerk.openSignUp();
-````
-</Tab>
-</Tabs>
+```
+</CodeBlockTabs>
 
 ## Props
 
