--- a/src/pages/components/organization-management/organization-profile.mdx
+++ b/src/pages/components/organization-management/organization-profile.mdx
@@ -1,6 +1,7 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Tables } from "@/components/Table";
 import { Images } from "@/components/Images";
+import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # `<OrganizationProfile />`
 
@@ -17,8 +18,8 @@ UI that allows users to manage their organization profile and security settings.
 
 ## Usage
 
-<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
-<Tab>
+
+<CodeBlockTabs options={['Next.js', 'React']}>
 ```jsx copy filename="/pages/organization-profile/[[...index]].tsx"
 import { OrganizationProfile } from "@clerk/nextjs";
 
@@ -26,8 +27,6 @@ export default function OrganizationProfilePage() {
   return <OrganizationProfile />;
 }
 ```
-</Tab>
-<Tab>
 ```jsx copy filename="organization-profile.tsx"
 import { OrganizationProfile } from "@clerk/clerk-react";
 
@@ -35,8 +34,7 @@ export default function OrganizationProfilePage() {
   return <OrganizationProfile />;
 }
 ```
-</Tab>
-</Tabs>
+</CodeBlockTabs>
 ## Props
 
 <Tables
