--- a/src/pages/components/authentication/sign-up-button.mdx
+++ b/src/pages/components/authentication/sign-up-button.mdx
@@ -1,6 +1,7 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
 import { Tables } from "@/components/Table";
+import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # `<SignUpButton />`
 
@@ -8,8 +9,8 @@ import { Tables } from "@/components/Table";
 
 ## Usage
 
-<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
-<Tab>
+#### Basic Usage
+<CodeBlockTabs options={['Next.js', 'React', 'Remix', 'Gatsby']}>
 ```jsx copy filename="pages/index.js"
 import { SignUpButton } from "@clerk/nextjs";
 
@@ -22,38 +23,65 @@ export default function Home() {
   );
 }
 ```
-You can also overide the default button with your own button and text.
+```jsx copy filename="example.js"
+import { SignUpButton } from "@clerk/clerk-react";
 
+export default function Example() {
+  return (
+    <div>
+    <h1> Sign up </h1>
+      <SignUpButton />
+    </div>
+  );
+}
+```
+```jsx copy filename="pages/index.js"
+import { SignUpButton } from "@clerk/remix";
+
+export default function Home() {
+  return (
+    <div>
+    <h1> Sign up </h1>
+      <SignUpButton />
+    </div>
+  );
+}
+```
+```jsx copy filename="pages/index.js"
+import { SignUpButton } from "gatsby-plugin-clerk";
+
+export default function Home() {
+  return (
+    <div>
+    <h1> Sign up </h1>
+      <SignUpButton />
+    </div>
+  );
+}
+```
+</CodeBlockTabs>
+
+#### Custom Usage
+
+In some cases you will want to use your own button, or button text. You can do that by wrapping your button up.
+
+<CodeBlockTabs options={['Next.js', 'React', 'Remix', 'Gatsby']}>
 ```jsx copy filename="pages/index.js"
 import { SignUpButton } from "@clerk/nextjs";
 
 export default function Home() {
   return (
     <div>
-      <h1> Sign up </h1>
+    <h1> Sign up </h1>
       <SignUpButton mode="modal">
-        <button className="btn">Sign up</button>
+        <button>
+          Sign up
+        </button>
       </SignUpButton>
     </div>
   );
 }
 ```
-
-</Tab>
-<Tab>
-```jsx copy filename="example.js"
-import { SignUpButton } from "@clerk/clerk-react";
-
-export default function Example() {
-  return (
-    <div>
-    <h1> Sign up </h1>
-      <SignUpButton />
-    </div>
-  );
-}
-```
-You can also overide the default button with your own button and text.
 ```jsx copy filename="example.js"
 import { SignUpButton } from "@clerk/clerk-react";
 
@@ -62,7 +90,7 @@ export default function Example() {
     <div>
     <h1> Sign up </h1>
       <SignUpButton mode="modal">
-        <button className="btn">
+        <button>
           Sign up
         </button>
       </SignUpButton>
@@ -70,21 +98,6 @@ export default function Example() {
   );
 }
 ```
-</Tab>
-<Tab>
-```jsx copy filename="pages/index.js"
-import { SignUpButton } from "@clerk/remix";
-
-export default function Home() {
-  return (
-    <div>
-    <h1> Sign up </h1>
-      <SignUpButton />
-    </div>
-  );
-}
-```
-You can also overide the default button with your own button and text.
 ```jsx copy filename="pages/index.js"
 import { SignUpButton } from "@clerk/remix";
 
@@ -93,7 +106,7 @@ export default function Home() {
     <div>
     <h1> Sign up </h1>
       <SignUpButton mode="modal">
-        <button className="btn">
+        <button>
           Sign up
         </button>
       </SignUpButton>
@@ -101,21 +114,6 @@ export default function Home() {
   );
 }
 ```
-</Tab>
-<Tab>
-```jsx copy filename="pages/index.js"
-import { SignUpButton } from "gatsby-plugin-clerk";
-
-export default function Home() {
-  return (
-    <div>
-    <h1> Sign up </h1>
-      <SignUpButton />
-    </div>
-  );
-}
-```
-You can also overide the default button with your own button and text.
 ```jsx copy filename="pages/index.js"
 import { SignUpButton } from "gatsby-plugin-clerk";
 
@@ -124,7 +122,7 @@ export default function Home() {
     <div>
     <h1> Sign up </h1>
       <SignUpButton mode="modal">
-        <button className="btn">
+        <button>
           Sign up
         </button>
       </SignUpButton>
@@ -132,7 +130,4 @@ export default function Home() {
   );
 }
 ```
-</Tab>
-</Tabs
-
->
+</CodeBlockTabs>
