--- a/src/pages/components/authentication/user-button.mdx
+++ b/src/pages/components/authentication/user-button.mdx
@@ -1,6 +1,7 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Tables } from "@/components/Table";
 import { Images } from "@/components/Images";
+import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # `<UserButton />`
 
@@ -17,8 +18,7 @@ The `<UserButton/>` component is used to render the familiar user button UI po
 
 ## Usage
 
-<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
-<Tab>
+<CodeBlockTabs options={['Next.js', 'React']}>
 ```jsx copy filename="userButtonExample.tsx"
 import {
   ClerkProvider,
@@ -40,7 +40,7 @@ return (
         {/* Signed out users get sign in button */}
         <SignInButton />
       </SignedOut>
-    </header> 
+    </header>
 );
 }
 
@@ -54,9 +54,7 @@ function MyApp({ pageProps }) {
 
 export default MyApp;
 ```
-</Tab>
-<Tab>
-  ```tsx filename="app.tsx" copy
+```tsx filename="app.tsx" copy
 import {
    ClerkProvider,
    SignedIn,
@@ -125,9 +123,7 @@ function App() {
 }
 
 ```
-</Tab>
-</Tabs>
-
+</CodeBlockTabs>
 ## Props
 
 <Tables
