--- a/src/pages/components/authentication/user-profile.mdx
+++ b/src/pages/components/authentication/user-profile.mdx
@@ -1,6 +1,7 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Tables } from "@/components/Table";
 import { Images } from "@/components/Images";
+import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # `<UserProfile />`
 
@@ -15,10 +16,8 @@ The `<UserProfile/>` component is used to render a beautiful, full-featured ac
 
 ## Usage
 
-<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
-<Tab>
-Using the [Next.js optional catch all route](https://nextjs.org/docs/routing/dynamic-routes#optional-catch-all-routes), you can embed the `<UserProfile/>` component. This allows you to redirect the user inside your application and handle any redirects.
 
+<CodeBlockTabs options={['Next.js', 'React']}>
 ```jsx copy filename="/pages/user-profile/[[...index]].tsx"
 import { UserProfile } from "@clerk/nextjs";
 
@@ -28,9 +27,6 @@ const UserProfilePage = () => (
 
 export default UserProfilePage;
 ```
-
-</Tab>
-<Tab>
 ```jsx copy filename="/user-profile.tsx"
 import { UserProfile } from "@clerk/clerk-react";
 
@@ -40,8 +36,7 @@ const UserProfilePage = () => (
 
 export default UserProfilePage;
 ```
-</Tab>
-</Tabs>
+</CodeBlockTabs>
 
 ## Props
 
