--- a/src/pages/components/organization-management/create-organization.mdx
+++ b/src/pages/components/organization-management/create-organization.mdx
@@ -1,6 +1,7 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Tables } from "@/components/Table";
 import { Images } from "@/components/Images";
+import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # `<CreateOrganization />`
 
@@ -17,8 +18,7 @@ UI that allows users to create brand new organizations within you application.
 
 ## Usage
 
-<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
-<Tab>
+<CodeBlockTabs options={['Next.js', 'React']}>
 ```jsx copy filename="/pages/create-organization/[[...index]].tsx"
 import { CreateOrganization } from "@clerk/nextjs";
 
@@ -26,8 +26,6 @@ export default function CreateOrganizationPage() {
   return <CreateOrganization />;
 }
 ```
-</Tab>
-<Tab>
 ```jsx copy filename="/create-organization.tsx"
 import { CreateOrganization } from "@clerk/clerk-react";
 
@@ -35,8 +33,7 @@ export default function CreateOrganizationPage() {
   return <CreateOrganization />;
 }
 ```
-</Tab>
-</Tabs>
+</CodeBlockTabs>
 ## Props
 
 <Tables
