Add remix to guides

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -27,6 +27,12 @@ The Clerk beta docs are a work in progress, you may find some rough edges or mis
       cta="Get Started"
     />
     <Cards
+      title="Remix"
+      description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your Remix application."
+      link="/quickstarts/remix"
+      cta="Get Started"
+    />
+    <Cards
       title="Expo"
       description="Learn how to use Clerk to add secure authentication and user management to your Expo application using custom flows."
       link="/quickstarts/expo"
