--- a/src/pages/quickstarts.mdx
+++ b/src/pages/quickstarts.mdx
@@ -25,6 +25,12 @@ Our quickstart guides are designed to help you get started with Clerk and unders
       cta="Get Started"
     />
     <Cards
+      title="Remix"
+      description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your Remix application."
+      link="/quickstarts/remix"
+      cta="Get Started"
+    />
+    <Cards
       title="Expo"
       description="Learn how to use Clerk to add secure authentication and user management to your Expo application using custom flows."
       link="/quickstarts/expo"
