--- a/src/pages/quickstarts/remix.mdx
+++ b/src/pages/quickstarts/remix.mdx
@@ -366,7 +366,7 @@ export default function Example() {
   return <div>Hello, {user.firstName} welcome to Clerk</div>;
 }
 ```
-### Server Side
+## Server Side
 
 ### SSR
 
