Add code tabs to quickstarts

--- a/src/pages/quickstarts/expo.mdx
+++ b/src/pages/quickstarts/expo.mdx
@@ -3,6 +3,7 @@ import { Callout } from "nextra-theme-docs";
 import { YouTube } from "@/components/Youtube";
 import { Images } from "@/components/Images";
 import {Cards} from "@/components/Cards";
+import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # Use Clerk with Expo
 
@@ -14,24 +15,17 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 </Callout>
 
 ## Create your Expo Project
-<Tabs items={["npx", "yarn", "pnpm"]}>
-  <Tab>
+<CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
   ``` bash filename="terminal" copy
   npx create-expo-app your-project --template expo-template-blank-typescript@47
   ```
-  </Tab>
-  <Tab>
    ``` bash filename="terminal" copy
    yarn create-expo-app [name] --template expo-template-blank-typescript@47
    ```
-   </Tab>
-  <Tab>
   ``` bash filename="terminal" copy
   pnpm create-expo-app [name] --template expo-template-blank-typescript@47
   ```
-  </Tab>
-</Tabs>
-
+</CodeBlockTabs>
 
 
 ## Install @clerk/clerk-expo
@@ -291,7 +285,7 @@ export default function SignInScreen() {
         identifier: emailAddress,
         password,
       });
-      // This is an important step, 
+      // This is an important step,
       // This indicates the user is signed in
       await setActive({ session: completeSignIn.createdSessionId });
     } catch (err: any) {
@@ -521,8 +515,8 @@ const styles = StyleSheet.create({
 
 ## Adding a token cache
 
-A token cache is important for persisting your JWT. By default Clerk holds it in memory, however this method shouldn't be used for Production applications. 
-Expo provides a way to encrypt and securely store key–value pairs locally on the device via [`expo-secure-store`](https://docs.expo.dev/versions/v47.0.0/sdk/securestore/).  
+A token cache is important for persisting your JWT. By default Clerk holds it in memory, however this method shouldn't be used for Production applications.
+Expo provides a way to encrypt and securely store key–value pairs locally on the device via [`expo-secure-store`](https://docs.expo.dev/versions/v47.0.0/sdk/securestore/).
 
 You can use it as your client JWT storage by setting the `tokenCache` prop in your `<ClerkProvider/>` as shown below.
 
@@ -735,5 +729,5 @@ Now you have an application integrated with Clerk you will want to read the foll
       link="/sdk/shared/use-auth"
       cta="Learn More"
     />
-   </div> 
+   </div>
 </div>
