--- a/src/pages/quickstarts/nextjs/app-router.mdx
+++ b/src/pages/quickstarts/nextjs/app-router.mdx
@@ -2,6 +2,7 @@ import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
 import { YouTube } from "@/components/Youtube";
 import {Cards} from "@/components/Cards";
+import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # Use Clerk with Next.js
 
@@ -11,23 +12,17 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 
 Once you have a Next.js application ready, you need to install Clerk's Next.js SDK. This gives you access to prebuilt components and hooks, as well as our helpers for Next.js API routes, server-side rendering, and middleware.
 
-<Tabs items={["npm", "yarn", "pnpm"]}>
-  <Tab>
+<CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
   ``` bash filename="your-project" copy
   npm install @clerk/nextjs
   ```
-  </Tab>
-  <Tab>
-   ``` bash filename="your-project" copy
+  ``` bash filename="your-project" copy
    yarn add @clerk/nextjs
    ```
-   </Tab>
-  <Tab>
-  ``` bash filename="your-project" copy
-  pnpm i @clerk/nextjs
-  ```
-  </Tab>
-</Tabs>
+   ``` bash filename="your-project" copy
+   pnpm i @clerk/nextjs
+   ```
+</CodeBlockTabs>
 
 ## Set Environment Keys
 
@@ -99,7 +94,7 @@ export default function Page() {
 ## Add Middleware
 
 To use server side functionality, you need to add the Clerk middleware to your Next.js application. This allows you to access the session in your Next.js API routes and server-side rendered pages. Middleware should be placed at the root of your project.
-  
+
 <Callout type="info" emoji="ℹ️">
 If you select `src/` as part of the create-next-app CLI you will need to place the middleware file inside of that directory.
 </Callout>
@@ -365,5 +360,5 @@ Now you have an application integrated with Clerk you will want to read the foll
       link="/sdk/shared/use-auth"
       cta="Learn More"
     />
-   </div> 
+   </div>
 </div>
