--- a/src/pages/quickstarts/nextjs/stable.mdx
+++ b/src/pages/quickstarts/nextjs/stable.mdx
@@ -3,6 +3,7 @@ import { Callout } from "nextra-theme-docs";
 import { YouTube } from "@/components/Youtube";
 import { Images } from "@/components/Images";
 import {Cards} from "@/components/Cards";
+import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # Use Clerk with Next.js
 
@@ -17,23 +18,17 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 
 Once you have a Next.js application ready, you need to install Clerk's Next.js SDK. This gives you access to prebuilt components and hooks, as well as our helpers for Next.js API routes, server-side rendering, and middleware.
 
-<Tabs items={["npm", "yarn", "pnpm"]}>
-  <Tab>
+<CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
   ``` bash filename="your-project" copy
   npm install @clerk/nextjs
   ```
-  </Tab>
-  <Tab>
-   ``` bash filename="your-project" copy
+  ``` bash filename="your-project" copy
    yarn add @clerk/nextjs
    ```
-   </Tab>
-  <Tab>
-  ``` bash filename="your-project" copy
-  pnpm i @clerk/nextjs
-  ```
-  </Tab>
-</Tabs>
+   ``` bash filename="your-project" copy
+   pnpm i @clerk/nextjs
+   ```
+</CodeBlockTabs>
 
 ## Set Environment Keys
 
@@ -398,5 +393,5 @@ Now you have an application integrated with Clerk you will want to read the foll
       link="/sdk/shared/use-auth"
       cta="Learn More"
     />
-   </div> 
+   </div>
 </div>
