--- a/src/pages/quickstarts/react.mdx
+++ b/src/pages/quickstarts/react.mdx
@@ -3,6 +3,7 @@ import { Callout } from "nextra-theme-docs";
 import { YouTube } from "@/components/Youtube";
 import { Images } from "@/components/Images";
 import {Cards} from "@/components/Cards";
+import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # Use Clerk with React
 
@@ -12,23 +13,17 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 
 Once you have a React application ready, you need to install Clerk's React SDK. This gives you access to our prebuilt components and hooks for React applications.
 
-<Tabs items={["npm", "yarn", "pnpm"]}>
-  <Tab>
+<CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
   ``` bash filename="your-project" copy
   npm install @clerk/clerk-react
   ```
-  </Tab>
-  <Tab>
    ``` bash filename="your-project" copy
    yarn add @clerk/clerk-react
    ```
-   </Tab>
-  <Tab>
   ``` bash filename="your-project" copy
   pnpm i @clerk/clerk-react
   ```
-  </Tab>
-</Tabs>
+</CodeBlockTabs>
 
 ## Set Environment Keys
 
