--- a/src/pages/components/customization/appearance.mdx
+++ b/src/pages/components/customization/appearance.mdx
@@ -60,7 +60,7 @@ import { dark } from '@clerk/themes';
 import { ClerkProvider } from "@clerk/clerk-react";
 
 if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
-  throw "Missing Publishable Key"
+  throw new Error("Missing Publishable Key")
 }
 const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
 
