--- a/src/pages/quickstarts/remix.mdx
+++ b/src/pages/quickstarts/remix.mdx
@@ -9,7 +9,7 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 Learn how to use Clerk to quickly and easily add secure authentication and user management to your Remix application.
 
-## Install @clerk/clerk-react
+## Install @clerk/remix
 
 Once you have a React application ready, you need to install Clerk's React SDK. This gives you access to our prebuilt components and hooks for React applications.
 
