fix more react stuff

--- a/src/pages/quickstarts/remix.mdx
+++ b/src/pages/quickstarts/remix.mdx
@@ -11,7 +11,7 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 
 ## Install @clerk/remix
 
-Once you have a React application ready, you need to install Clerk's React SDK. This gives you access to our prebuilt components and hooks for React applications.
+Once you have a Remix application ready, you need to install Clerk's Remix SDK. This gives you access to our prebuilt components and hooks for Remix applications.
 
 <CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
   ``` bash filename="your-project" copy
