--- a/src/pages/quickstarts/nextjs/app-router.mdx
+++ b/src/pages/quickstarts/nextjs/app-router.mdx
@@ -60,7 +60,7 @@ export default function RootLayout({
 ```
 
 <Callout type="warning">
- The root layout is a server component, if you plan to use the `<ClerkProvider>` outisde the root layout it will need to be a server component as well.
+ The root layout is a server component, if you plan to use the `<ClerkProvider>` outside the root layout it will need to be a server component as well.
  </Callout>
 
 Clerk offers a set of prebuilt components that you can use to embed sign in, sign up, and other user management functions into your Next.js application.
