--- a/src/pages/components/authentication/sign-up.mdx
+++ b/src/pages/components/authentication/sign-up.mdx
@@ -31,13 +31,13 @@ const SignUpPage = () => (
 
 <SignUp path="/sign-up" routing="path" signInUrl="/sign-in" />
 );
-export default SignUnPage;
+export default SignUpPage;
 ```
 
 ```jsx copy filename="sign-up.jsx"
 import { SignUp } from "@clerk/clerk-react";
 
-function SignUnPage() {
+function SignUpPage() {
   return <SignUp />;
 }
 ```
